--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,4 @@
 h1 {
-    color: #8e9aaf;
-    border-style: dotted solid;
-    border-color: #cbc0d3;
-    background-color: #cbc0d3;
+    color: #5F0F40;
     text-align: center;
 }
